# kognac

./: .gitignore  CMakeLists.txt  NOTICE  README.md
include/kognac/: MisraGries.h  compressor.h  consts.h  disklz4reader.h  disklz4writer.h  diskreader.h  filemerger.h  filereader.h  flajolet.h  fpgrowth.h  hashcompressor.h  hashfunctions.h  hashmap.h  hashtable.h  kognac.h  logs.h  lruset.h  lz4io.h  multidisklz4reader.h  multidisklz4writer.h  progargs.h  schemaextractor.h  setestimation.h  sorter.h  stringscol.h  triple.h  triplewriters.h  utils.h
include/zstr/: .zstr.hpp.swp  strict_fstream.hpp  zstr.hpp
scripts/docker/: Dockerfile  update_and_make.sh
src/kognac/compression/: compressor.cpp  filereader.cpp  hashcompressor.cpp  hashtable.cpp  kognac.cpp
src/kognac/log/: logs.cpp
src/kognac/schema/: schemaextractor.cpp
src/kognac/sorting/: sorter.cpp
src/kognac/utils/: MisraGries.cpp  disklz4reader.cpp  disklz4writer.cpp  diskreader.cpp  logs.cpp  lz4io.cpp  multidisklz4reader.cpp  multidisklz4writer.cpp  multimergedisklz4reader.cpp  progargs.cpp  stringscol.cpp  triple.cpp  triplewriters.cpp  utils.cpp
src/launcher/: main.cpp
tests/: test_intconversion.cpp  test_log.cpp  test_zlib.cpp
win64/: kognac.sln
win64/kognac/: kognac.vcxproj  kognac.vcxproj.filters
win64/kognac-tests/: kognac-tests.vcxproj  kognac-tests.vcxproj.filters
win64/kognac_prj/: kognac_prj.vcxproj
